--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Akshat Gupta">
   <meta name="copyright" content="Akshat Gupta">
   <meta name="language" content="en">
-  <meta name="url" content="https://o2o-voice.akshatvg.com">
+  <meta name="url" content="https://group-voice.akshatvg.com">
   <meta name="category" content="Real Time Communication">
   <meta name="coverage" content="Worldwide">
   <meta name="rating" content="General">
@@ -23,7 +23,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Group Voice Call || Agora Web SDK NG">
   <meta property="og:description" content="Group voice call using the Agora Web SDK NG.">
-  <meta property="og:url" content="https://o2o-voice.akshatvg.com">
+  <meta property="og:url" content="https://group-voice.akshatvg.com">
   <meta name="theme-color" content="#2F3FB0">
   <meta property="og:site_name" content="Group Voice Call || Agora Web SDK NG">
   <meta name="twitter:card" content="website">
@@ -34,7 +34,7 @@
   <meta name="twitter:creator" content="@akshatvg">
   <meta itemprop="name" content="Group Voice Call || Agora Web SDK NG">
   <meta itemprop="description" content="Group voice call using the Agora Web SDK NG.">
-  <link rel="canonical" href="https://o2o-voice.akshatvg.com">
+  <link rel="canonical" href="https://group-voice.akshatvg.com">
   <title>Group Voice Call || Agora Web SDK NG</title>
 
   <!-- CSS only -->
