--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Group voice call using the Agora Web SDK NG.">
-  <meta name="keywords" content="Agora, RTC, Live Stream, Live Broadcast, SDK, CDN, Agora.io, NG, Many to Many">
+  <meta name="keywords" content="Agora, RTC, Voice Call, Audio Call, Audio, Voice, SDK, CDN, Agora.io, NG, Many to Many">
   <meta name="author" content="Akshat Gupta">
   <meta name="copyright" content="Akshat Gupta">
   <meta name="language" content="en">
