--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Group voice call using the Agora Web SDK NG.">
-  <meta name="keywords" content="Agora, RTC, Voice Call, Audio Call, Audio, Voice, SDK, CDN, Agora.io, NG, Many to Many">
+  <meta name="keywords"
+    content="Agora, RTC, Voice Call, Audio Call, Audio, Voice, SDK, CDN, Agora.io, NG, Many to Many">
   <meta name="author" content="Akshat Gupta">
   <meta name="copyright" content="Akshat Gupta">
   <meta name="language" content="en">
@@ -16,7 +17,6 @@
   <meta name="category" content="Real Time Communication">
   <meta name="coverage" content="Worldwide">
   <meta name="rating" content="General">
-  <meta name="og:phone_number" content="‭+919600093179">
   <meta name="og:country-name" content="India, USA, China">
   <meta name="og:region" content="Delhi, Chennai, Mumbai, Vellore, Kolkatta, Bangalore, Gurgaon, Los Angeles, Chicago">
   <meta name="og:site_name" content="Group Voice Call || Agora Web SDK NG">
@@ -60,6 +60,10 @@
     <form id="join-form" name="join-form" class="mt-4">
       <!-- Input Field -->
       <div class="row join-info-group">
+        <div class="col-sm">
+          <p class="join-info-text">App ID</p>
+          <input id="appid" type="text" placeholder="Enter Agora App ID" required class="form-control">
+        </div>
         <div class="col-sm">
           <p class="join-info-text">Channel</p>
           <input id="channel" type="text" placeholder="Enter Channel Name" required class="form-control">
